--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Erin Fuller Portfolio | Graphic Designer</title>
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." name="description">
-  <meta content="Erin Fuller Portfolio | Graphic Designer" property="og:title">
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="og:description">
-  <meta content="Erin Fuller Portfolio | Graphic Designer" property="twitter:title">
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="twitter:description">
+  <meta content="Erin Fuller is a UX designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." name="description">
+  <meta content="Erin Fuller Portfolio | UX Designer" property="og:title">
+  <meta content="Erin Fuller is a UX designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="og:description">
+  <meta content="Erin Fuller Portfolio | Designer" property="twitter:title">
+  <meta content="Erin Fuller is a UX designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -65,7 +65,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="#" class="nav-link third">Resume</a>
+      <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view?usp=sharing" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +81,7 @@
         <div class="home-header-supertitle">Hi, nice to meet you. I’m</div>
         <div class="home-header">Erin Fuller</div>
         <div class="div-block-8">
-          <a href="#" class="hero-button w-inline-block">
+          <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view?usp=sharing" class="hero-button w-inline-block">
             <div class="hero-button-content">Resume</div>
           </a>
           <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="hero-button w-inline-block">
