--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <a href="food-bank.html" class="mobile-nav-link project">Pittsburgh Food Bank</a>
         <a href="quarpanion.html" class="mobile-nav-link project">Quarpanion</a>
         <a href="selfie-kiosk.html" class="mobile-nav-link project">Selfie Kiosk</a>
-        <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="mobile-nav-link">Resume</a>
+        <a href="https://drive.google.com/file/d/1fiRrrqTpcRBl_CnnVewW5bETL1BsoQsJ/view?usp=sharing" target="_blank" class="mobile-nav-link">Resume</a>
         <div class="social-link-wrapper-mobile">
           <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
             <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -101,7 +101,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="nav-link third">Resume</a>
+      <a href="https://drive.google.com/file/d/1fiRrrqTpcRBl_CnnVewW5bETL1BsoQsJ/view?usp=sharing" target="_blank" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -117,7 +117,7 @@
         <div data-w-id="85168aed-abc2-0aba-54df-d255029dc9ec" class="home-header-supertitle">Hi, nice to meet you. I’m</div>
         <div data-w-id="d973c807-9673-f1c3-5097-d6eda8d985a6" class="home-header">Erin Fuller</div>
         <div class="div-block-8">
-          <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="hero-button w-inline-block">
+          <a href="https://drive.google.com/file/d/1fiRrrqTpcRBl_CnnVewW5bETL1BsoQsJ/view?usp=sharing" target="_blank" class="hero-button w-inline-block">
             <div class="hero-button-content">Resume</div>
           </a>
           <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="hero-button w-inline-block">
