--- a/quarpanion.html
+++ b/quarpanion.html
@@ -60,7 +60,7 @@
         <a href="food-bank.html" class="mobile-nav-link project">Pittsburgh Food Bank</a>
         <a href="quarpanion.html" aria-current="page" class="mobile-nav-link project w--current">Quarpanion</a>
         <a href="selfie-kiosk.html" class="mobile-nav-link project">Selfie Kiosk</a>
-        <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="mobile-nav-link">Resume</a>
+        <a href="https://drive.google.com/file/d/1fiRrrqTpcRBl_CnnVewW5bETL1BsoQsJ/view?usp=sharing" target="_blank" class="mobile-nav-link">Resume</a>
         <div class="social-link-wrapper-mobile">
           <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
             <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -87,7 +87,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="nav-link third">Resume</a>
+      <a href="https://drive.google.com/file/d/1fiRrrqTpcRBl_CnnVewW5bETL1BsoQsJ/view?usp=sharing" target="_blank" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
