--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html data-wf-page="62800fba7ec57999e13e805c" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
-  <title>Erin Fuller Portfolio | Graphic Designer</title>
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." name="description">
-  <meta content="Erin Fuller Portfolio | Graphic Designer" property="og:title">
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="og:description">
-  <meta content="Erin Fuller Portfolio | Graphic Designer" property="twitter:title">
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="twitter:description">
+  <title>Erin Fuller Portfolio | Designer</title>
+  <meta content="Erin Fuller is a designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." name="description">
+  <meta content="Erin Fuller Portfolio | Designer" property="og:title">
+  <meta content="Erin Fuller is a designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="og:description">
+  <meta content="Erin Fuller Portfolio | Designer" property="twitter:title">
+  <meta content="Erin Fuller is a designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
