--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jun 28 2022 20:39:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 28 2022 21:27:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62800fba7ec57999e13e805c" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
@@ -101,7 +101,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="nav-link third">Resume</a>
+      <a href="documents/ErinFuller-Resume-June2022-Formatted.pdf" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
